# bevy-android

./: Cargo.toml  Makefile.toml  README.md  release.toml
.github/workflows/: build-android.yml  ci.yml
launchers/mobile/: Cargo.toml
launchers/mobile/android/: AndroidManifest.xml  build.gradle  gradle.properties
launchers/mobile/android/src/com/danyow/bevy-android/: MainActivity.kt
launchers/mobile/src/: lib.rs
src/: lib.rs
