[package]
name = "bevy_android"
version = "0.1.0"
edition = "2021"



license = "MIT OR Apache-2.0"


[workspace]
resolver = "2"
members = ["launchers/mobile"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
lto = "thin"

[target.'cfg(not(target_arch="wasm32"))'.profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch="wasm32")'.profile.dev.package."*"]
opt-level = 's'

[target.'cfg(target_arch="wasm32")'.profile.release]
opt-level = 's'

[workspace.dependencies]
log = "0.4.19"
bevy = { version = "0.11", default-features = false, features = [
    "android_shared_stdcxx",
    "tonemapping_luts",
    "bevy_render",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "bevy_winit",
    "bevy_text",
    "bevy_pbr",
    "bevy_ui",
    "zstd",
    "ktx2",
    "png",
    "x11",
    "wav",
] }

[features]
default = []
inspect = []

[target.'cfg(not(target_family = "wasm"))'.features]
inspect = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy.workspace = true
log.workspace = true
